--- a/nivelC/index.html
+++ b/nivelC/index.html
@@ -4,35 +4,142 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select a Unit - Level A</title>
-    <link rel="stylesheet" href="../CSS/styles.css"> <!-- Mantém o CSS original -->
+    <link rel="stylesheet" href="../CSS/styles.css">
     <style>
-        /* Adiciona apenas a funcionalidade de desabilitar os botões */
-        .disabled {
+        .map-container {
+            width: 100%;
+            height: 100vh;
+            position: relative;
+            background-image: url('../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: 200%;
+            overflow-y: auto;
+        }
+
+        .back-button {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background-color: black;
+            color: white;
+            text-align: center;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .units {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+            justify-content: center; /* Centraliza os itens em telas menores */
+        }
+
+        /* Estilo dos botões das unidades */
+        .unit-button {
+            text-align: center;
+            padding: 10px 0;
+            color: green;
+            border: 2px solid green;
+            border-radius: 20px;
+            background-color: white;
+            text-decoration: none;
+            transition: background-color 0.3s ease, color 0.3s ease;
+            width: 100%; /* Preenche o espaço disponível */
+            max-width: 200px;
+            box-sizing: border-box;
+        }
+
+        /* Hover dos botões das unidades */
+        .unit-button:hover {
+            background-color: green;
+            color: white;
+        }
+
+        /* Botões desabilitados */
+        .unit-button.disabled {
+            background-color: rgba(128, 128, 128, 0.3); /* Cinza translúcido */
+            border-color: rgba(128, 128, 128, 0.5); /* Cinza mais escuro */
+            color: rgba(128, 128, 128, 0.5); /* Cinza claro */
             pointer-events: none;
-            opacity: 0.5;
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="map-container">
         <header>
-            <h1>Select a Unit</h1>
+            <h1 style="text-align: center;">Select a Unit</h1>
         </header>
         <main>
-            <div class="units" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; padding: 20px;">
-                <a href="#" class="unit-button disabled">Unit 1</a>
-                <a href="#" class="unit-button disabled">Unit 2</a>
-                <a href="#" class="unit-button disabled">Unit 3</a>
-                <a href="#" class="unit-button disabled">Unit 4</a>
-                <a href="#" class="unit-button disabled">Unit 5</a>
-                <a href="#" class="unit-button disabled">Unit 6</a>
-                <a href="#" class="unit-button disabled">Unit 7</a>
-                <a href="#" class="unit-button disabled">Unit 8</a>
-                <a href="#" class="unit-button disabled">Unit 9</a>
-                <a href="#" class="unit-button disabled">Unit 10</a>
+            <div class="units">
+                <a href="unidade1/index.html" id="unit1" class="unit-button">Unit 1</a>
+                <a href="unidade2/index.html" id="unit2" class="unit-button">Unit 2</a>
+                <a href="unidade3/index.html" id="unit3" class="unit-button">Unit 3</a>
+                <a href="unidade4/index.html" id="unit4" class="unit-button">Unit 4</a>
+                <a href="unidade5/index.html" id="unit5" class="unit-button">Unit 5</a>
+                <a href="unidade6/index.html" id="unit6" class="unit-button">Unit 6</a>
+                <a href="unidade7/index.html" id="unit7" class="unit-button">Unit 7</a>
+                <a href="unidade8/index.html" id="unit8" class="unit-button">Unit 8</a>
+                <a href="unidade9/index.html" id="unit9" class="unit-button">Unit 9</a>
+                <a href="unidade10/index.html" id="unit10" class="unit-button">Unit 10</a>
             </div>
             <button class="back-button" onclick="window.location.href='../index.html';">Back</button>
         </main>
     </div>
+
+    <!-- Firebase Configuration and Initialization (Namespaced SDK) -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            measurementId: "G-07VVJG9LRS",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+        };
+        firebase.initializeApp(firebaseConfig);
+
+        const db = firebase.database();
+        const auth = firebase.auth();
+
+        // Carregar o progresso do aluno quando ele está autenticado
+        auth.onAuthStateChanged(user => {
+            if (user) {
+                console.log("Usuário autenticado:", user.uid);
+                carregarProgresso(user.uid); 
+            } else {
+                console.error("Erro: Usuário não autenticado");
+            }
+        });
+
+        function carregarProgresso(userId) {
+            db.ref(`usuarios/${userId}/progresso/Level3`).once('value')
+                .then(snapshot => {
+                    const progresso = snapshot.val();
+                    console.log("Progresso do usuário:", progresso); // Log para verificar os dados recebidos
+
+                    const units = document.querySelectorAll('.unit-button');
+                    
+                    units.forEach(unit => {
+                        const unitId = unit.id.replace('unit', 'Unit');
+                        // Verifica se a unidade está no progresso e tem fase1 como true
+                        if (!progresso || !progresso[unitId] || progresso[unitId].fase1 !== true) {
+                            unit.classList.add('disabled');
+                        }
+                    });
+                })
+                .catch(error => {
+                    console.error("Erro ao acessar o banco de dados:", error);
+                });
+        }
+    </script>
 </body>
 </html>
