--- a/Formulario/login.html
+++ b/Formulario/login.html
@@ -50,7 +50,7 @@
                 .then((result) => {
                     var user = result.user;
                     alert('Phone login successful: ' + user.phoneNumber);
-                    window.location.href = "/nivelA/index.html";  // Redirects to main page after login
+                    window.location.href = "/index.html";  // Redirects to main page after login
                 })
                 .catch((error) => {
                     alert(error.message);
