--- a/Level1/Unit4/listening.html
+++ b/Level1/Unit4/listening.html
@@ -1,45 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hannah English Course - Listening</title>
-    
-    <!-- Firebase App (compatível) -->
+    <title>Mapa de Fases</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <!-- Firebase Authentication (compatível) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <!-- Firebase Database (compatível) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
     <script>
         // Configuração do Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
             projectId: "hannahenglishcourse",
             storageBucket: "hannahenglishcourse.appspot.com",
             messagingSenderId: "449818788486",
             appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-            measurementId: "G-07VVJG9LRS",
-            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+            measurementId: "G-07VVJG9LRS"
         };
-        // Inicializar o Firebase
         firebase.initializeApp(firebaseConfig);
     </script>
-
-    <!-- Link para o arquivo CSS -->
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="title-container">
-        <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
+    <div id="mapContainer" class="map-container">
+        <svg id="linesSvg" class="lines-svg"></svg>
+        <!-- Fases e outros elementos serão inseridos pelo script -->
     </div>
-    
-    <div id="mapContainer" class="map-container"></div>
-    <svg id="linesSvg" class="lines-svg"></svg>
-
-    <!-- Link para o arquivo JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
