--- a/Level1/Unit4/listening.html
+++ b/Level1/Unit4/listening.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapa de Fases</title>
+    <title>Hannah English Course</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script>
-        // Configuração do Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
-            authDomain: "hannahenglishcourse.firebaseapp.com",
-            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
-            projectId: "hannahenglishcourse",
-            storageBucket: "hannahenglishcourse.appspot.com",
-            messagingSenderId: "449818788486",
-            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-            measurementId: "G-07VVJG9LRS"
-        };
-        firebase.initializeApp(firebaseConfig);
-    </script>
 </head>
 <body>
-    <div id="mapContainer" class="map-container">
+    <div class="map-container" id="mapContainer">
+        <!-- Imagem de título centralizada sobre o fundo -->
+        <div class="title-container">
+            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
+        </div>
+
+        <!-- SVG para as linhas -->
         <svg id="linesSvg" class="lines-svg"></svg>
-        <!-- Fases e outros elementos serão inseridos pelo script -->
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
