--- a/Level1/Unit4/listening.html
+++ b/Level1/Unit4/listening.html
@@ -34,6 +34,10 @@
     </script>
 </head>
 <body>
+
+    <!-- Botão Back -->
+    <a href="javascript:history.back()" class="back-button">Back</a>
+
     <div class="map-container" id="mapContainer">
         <!-- Imagem de título centralizada sobre o fundo -->
         <div class="title-container">
