--- a/Level1/index.html
+++ b/Level1/index.html
@@ -72,16 +72,16 @@
         </header>
         <main>
             <div class="units">
-                <a href="Unit1/index.html" id="unit1" class="unit-button">Unit 1</a>
-                <a href="Unit2/index.html" id="unit2" class="unit-button">Unit 2</a>
-                <a href="Unit3/index.html" id="unit3" class="unit-button">Unit 3</a>
-                <a href="Unit4/index.html" id="unit4" class="unit-button">Unit 4</a>
-                <a href="Unit5/index.html" id="unit5" class="unit-button">Unit 5</a>
-                <a href="Unit6/index.html" id="unit6" class="unit-button">Unit 6</a>
-                <a href="Unit7/index.html" id="unit7" class="unit-button">Unit 7</a>
-                <a href="Unit8/index.html" id="unit8" class="unit-button">Unit 8</a>
-                <a href="Unit9/index.html" id="unit9" class="unit-button">Unit 9</a>
-                <a href="Unit10/index.html" id="unit10" class="unit-button">Unit 10</a>
+                <a href="Unit1/index.html" id="unit1" class="unit-button disabled">Unit 1</a>
+                <a href="Unit2/index.html" id="unit2" class="unit-button disabled">Unit 2</a>
+                <a href="Unit3/index.html" id="unit3" class="unit-button disabled">Unit 3</a>
+                <a href="Unit4/index.html" id="unit4" class="unit-button disabled">Unit 4</a>
+                <a href="Unit5/index.html" id="unit5" class="unit-button disabled">Unit 5</a>
+                <a href="Unit6/index.html" id="unit6" class="unit-button disabled">Unit 6</a>
+                <a href="Unit7/index.html" id="unit7" class="unit-button disabled">Unit 7</a>
+                <a href="Unit8/index.html" id="unit8" class="unit-button disabled">Unit 8</a>
+                <a href="Unit9/index.html" id="unit9" class="unit-button disabled">Unit 9</a>
+                <a href="Unit10/index.html" id="unit10" class="unit-button disabled">Unit 10</a>
             </div>
             <button class="back-button" onclick="window.location.href='../index.html';">Back</button>
         </main>
@@ -106,14 +106,6 @@
 
         const db = firebase.database();
         const auth = firebase.auth();
-
-        // Bloquear todas as unidades inicialmente
-        function bloquearTodasUnidades() {
-            const units = document.querySelectorAll('.unit-button');
-            units.forEach(unit => {
-                unit.classList.add('disabled');
-            });
-        }
 
         // Desbloquear unidades com base no papel e progresso do usuário
         function desbloquearUnidades(userId, role) {
@@ -155,7 +147,6 @@
         // Carregar o papel do usuário e verificar progresso
         auth.onAuthStateChanged(user => {
             if (user) {
-                bloquearTodasUnidades(); // Bloqueia todas as unidades no início
                 db.ref(`usuarios/${user.uid}/role`).once('value')
                     .then(snapshot => {
                         const role = snapshot.val();
