--- a/index.html
+++ b/index.html
@@ -146,5 +146,16 @@
     </script>
 
     <!-- Outros scripts como Service Worker e botões adicionais -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js')
+              .then(registration => {
+                console.log('Service Worker registrado com sucesso:', registration.scope);
+              })
+              .catch(error => {
+                console.log('Falha ao registrar o Service Worker:', error);
+              });
+        }
+    </script>
 </body>
 </html>
