--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 console.error('Erro ao carregar configuração do Firebase:', error);
             });
 
+        // Funções e lógicas adicionais do Firebase seguem abaixo...
         function bloquearTodosNiveis() {
             document.querySelectorAll('.level-button').forEach((button) => {
                 button.style.filter = 'grayscale(100%)';
@@ -146,16 +147,5 @@
     </script>
 
     <!-- Outros scripts como Service Worker e botões adicionais -->
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
-              .then(registration => {
-                console.log('Service Worker registrado com sucesso:', registration.scope);
-              })
-              .catch(error => {
-                console.log('Falha ao registrar o Service Worker:', error);
-              });
-        }
-    </script>
 </body>
 </html>
