--- a/Level1/Unit4/Flashcards/index.html
+++ b/Level1/Unit4/Flashcards/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah FlashCards</title>
     <style>
+        /* Seus estilos aqui */
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -83,68 +84,20 @@
             height: 24px;
             cursor: pointer;
         }
-        #completion-modal {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: white;
-            padding: 20px;
-            border: 2px solid #333;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-            text-align: center;
-        }
-        #completion-modal button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #333;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        #completion-modal button:hover {
-            background-color: #555;
-        }
-        #overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 999;
-        }
     </style>
 </head>
 <body>
-    <button onclick="window.location.href='../index.html'" style="padding: 15px 25px; background-color: #f8f8f8; color: #333; border: 1px solid #ccc; border-radius: 5px; font-size: 1.2rem; cursor: pointer;">
-        Back
-    </button>
-
     <h1>Hannah FlashCards</h1>
     <div id="flashcards-container"></div>
 
-    <!-- Modal de conclusão -->
-    <div id="overlay"></div>
-    <div id="completion-modal">
-        <h2>Phase Completed!</h2>
-        <p>Congratulations! You have completed this phase.</p>
-        <button onclick="closeModal()">Close</button>
-    </div>
-
-    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
+    <!-- Firebase Scripts -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
     <script>
-        let totalCards = 0;
-        let rotatedCards = 0;
-        let soundPlayed = 0;
-
         // Configuração do Firebase
-        var firebaseConfig = {
+        const firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
             projectId: "hannahenglishcourse",
@@ -155,8 +108,12 @@
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
         };
 
-        // Inicializar o Firebase
+        // Inicializando o Firebase
         firebase.initializeApp(firebaseConfig);
+
+        let totalCards = 0;
+        let rotatedCards = 0;
+        let soundPlayed = 0;
 
         // Função para carregar palavras do arquivo words.txt
         async function loadWords() {
@@ -243,27 +200,14 @@
         // Função para verificar se todos os cartões foram rotacionados e todos os ícones de som foram clicados
         function checkCompletion() {
             if (rotatedCards === totalCards && soundPlayed === totalCards) {
-                showModal();
                 updateNextPhase(); // Atualiza o Firebase
             }
-        }
-
-        // Função para mostrar o modal de conclusão
-        function showModal() {
-            document.getElementById('completion-modal').style.display = 'block';
-            document.getElementById('overlay').style.display = 'block';
-        }
-
-        // Função para fechar o modal de conclusão
-        function closeModal() {
-            document.getElementById('completion-modal').style.display = 'none';
-            document.getElementById('overlay').style.display = 'none';
         }
 
         // Função para atualizar a fase no Firebase
         async function updateNextPhase() {
             const { level, unit } = getLevelAndUnitFromURL(); // Pega Level e Unit da URL
-            const userId = "SUNqNVmtcrh1YdZgjaRDAu3uAmj2"; // ID do usuário, deve ser dinâmico com a autenticação
+            const userId = firebase.auth().currentUser.uid; // ID do usuário autenticado
 
             const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
             
