--- a/Level1/Unit4/Flashcards/index.html
+++ b/Level1/Unit4/Flashcards/index.html
@@ -45,7 +45,7 @@
             transition: transform 0.6s;
             transform-style: preserve-3d;
         }
-        .card:hover .card-inner {
+        .card.rotated .card-inner {
             transform: rotateY(180deg);
         }
         .card-front, .card-back {
@@ -159,9 +159,9 @@
                 cardBack.textContent = word;  // Mostra a palavra correta no verso
 
                 // Monitora a rotação do cartão
-                cardInner.addEventListener('click', function() {
-                    if (!cardInner.classList.contains('rotated')) {
-                        cardInner.classList.add('rotated');
+                card.addEventListener('click', function() {
+                    if (!card.classList.contains('rotated')) {
+                        card.classList.add('rotated');
                         rotatedCards++;
                         checkCompletion();
                     }
@@ -199,7 +199,9 @@
 
         // Função para verificar se todos os cartões foram rotacionados e todos os ícones de som foram clicados
         function checkCompletion() {
+            console.log(`Rotated cards: ${rotatedCards}, Sound played: ${soundPlayed}`);
             if (rotatedCards === totalCards && soundPlayed === totalCards) {
+                console.log("Fase concluída");
                 updateNextPhase(); // Atualiza o Firebase
             }
         }
