--- a/Level1/Unit4/Flashcards/index.html
+++ b/Level1/Unit4/Flashcards/index.html
@@ -202,14 +202,25 @@
             console.log(`Rotated cards: ${rotatedCards}, Sound played: ${soundPlayed}`);
             if (rotatedCards === totalCards && soundPlayed === totalCards) {
                 console.log("Fase concluída");
-                updateNextPhase(); // Atualiza o Firebase
+                ensureUserIsAuthenticated(updateNextPhase); // Atualiza o Firebase
             }
         }
 
+        // Função para garantir que o usuário esteja autenticado
+        function ensureUserIsAuthenticated(callback) {
+            firebase.auth().onAuthStateChanged(function(user) {
+                if (user) {
+                    // Usuário autenticado, pode continuar
+                    callback(user.uid);
+                } else {
+                    console.error("Usuário não autenticado");
+                }
+            });
+        }
+
         // Função para atualizar a fase no Firebase
-        async function updateNextPhase() {
+        async function updateNextPhase(userId) {
             const { level, unit } = getLevelAndUnitFromURL(); // Pega Level e Unit da URL
-            const userId = firebase.auth().currentUser.uid; // ID do usuário autenticado
 
             const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
             
