--- a/Level1/Unit4/Flashcards/index.html
+++ b/Level1/Unit4/Flashcards/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah FlashCards</title>
     <style>
-        /* Seus estilos aqui */
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -84,11 +83,54 @@
             height: 24px;
             cursor: pointer;
         }
+        /* Estilo do modal de conclusão */
+        #completion-modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            padding: 20px;
+            border: 2px solid #333;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+            text-align: center;
+        }
+        #completion-modal button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        #completion-modal button:hover {
+            background-color: #555;
+        }
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
     </style>
 </head>
 <body>
     <h1>Hannah FlashCards</h1>
     <div id="flashcards-container"></div>
+
+    <!-- Modal de conclusão -->
+    <div id="overlay"></div>
+    <div id="completion-modal">
+        <h2>Phase Completed!</h2>
+        <p>Congratulations! You have completed this phase.</p>
+        <button onclick="closeModal()">Close</button>
+    </div>
 
     <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -160,11 +202,14 @@
 
                 // Monitora a rotação do cartão
                 card.addEventListener('click', function() {
-                    if (!card.classList.contains('rotated')) {
-                        card.classList.add('rotated');
+                    // Alterna a rotação do cartão
+                    card.classList.toggle('rotated');
+                    if (card.classList.contains('rotated')) {
                         rotatedCards++;
-                        checkCompletion();
+                    } else {
+                        rotatedCards--;
                     }
+                    checkCompletion();
                 });
 
                 // Ícone de som posicionado sobre o cartão
@@ -202,8 +247,21 @@
             console.log(`Rotated cards: ${rotatedCards}, Sound played: ${soundPlayed}`);
             if (rotatedCards === totalCards && soundPlayed === totalCards) {
                 console.log("Fase concluída");
+                showModal(); // Exibe a mensagem de fase concluída
                 ensureUserIsAuthenticated(updateNextPhase); // Atualiza o Firebase
             }
+        }
+
+        // Função para exibir o modal de conclusão
+        function showModal() {
+            document.getElementById('completion-modal').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+
+        // Função para fechar o modal de conclusão
+        function closeModal() {
+            document.getElementById('completion-modal').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
         }
 
         // Função para garantir que o usuário esteja autenticado
