--- a/Level1/Unit4/Flashcards/index.html
+++ b/Level1/Unit4/Flashcards/index.html
@@ -279,23 +279,15 @@
         // Função para atualizar a fase no Firebase
         async function updateNextPhase(userId) {
             const currentPhase = getPhaseFromURL(); // Pega a fase atual da URL
+            const nextPhase = parseInt(currentPhase) + 1; // Calcula a próxima fase
 
             const { level, unit } = getLevelAndUnitFromURL(); // Pega Level e Unit da URL
             const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
             
             try {
-                // Verifica se a fase atual já foi concluída
-                const snapshot = await dbRef.child(`fase${currentPhase}`).once('value');
-                const isCompleted = snapshot.val();
-                
-                if (!isCompleted) {
-                    // Se a fase atual não foi concluída, marca como concluída e libera a próxima fase
-                    const nextPhase = parseInt(currentPhase) + 1; // Próxima fase
-                    await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
-                    console.log(`Fase ${currentPhase} marcada como concluída e fase ${nextPhase} liberada.`);
-                } else {
-                    console.log(`Fase ${currentPhase} já foi concluída.`);
-                }
+                // Sempre libera a próxima fase (mesmo se a fase atual já estiver concluída)
+                await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+                console.log(`Fase ${currentPhase} marcada como concluída e fase ${nextPhase} liberada.`);
             } catch (error) {
                 console.error("Erro ao atualizar o progresso da fase:", error);
             }
