--- a/Level1/Unit4/Flashcards/index.html
+++ b/Level1/Unit4/Flashcards/index.html
@@ -154,7 +154,7 @@
         firebase.initializeApp(firebaseConfig);
 
         let totalCards = 0;
-        let rotatedCards = 0;
+        let interactedCards = []; // Array de controle para saber se as cartas foram viradas
         let soundPlayed = 0;
 
         // Função para carregar palavras do arquivo words.txt
@@ -173,6 +173,7 @@
         async function generateFlashcards() {
             const words = await loadWords();
             totalCards = words.length; // Definir o total de cartões
+            interactedCards = new Array(totalCards).fill(false); // Inicializa o array de controle
             const container = document.getElementById('flashcards-container');
 
             if (words.length === 0) {
@@ -202,13 +203,11 @@
 
                 // Monitora a rotação do cartão
                 card.addEventListener('click', function() {
-                    // Alterna a rotação do cartão
                     card.classList.toggle('rotated');
-                    if (card.classList.contains('rotated')) {
-                        rotatedCards++;
-                    } else {
-                        rotatedCards--;
-                    }
+
+                    // Marca que a carta foi interagida
+                    interactedCards[index] = true;
+
                     checkCompletion();
                 });
 
@@ -242,10 +241,12 @@
             window.speechSynthesis.speak(utterance);
         }
 
-        // Função para verificar se todos os cartões foram rotacionados e todos os ícones de som foram clicados
+        // Função para verificar se todas as cartas foram interagidas (viradas pelo menos uma vez) e todos os ícones de som foram clicados
         function checkCompletion() {
-            console.log(`Rotated cards: ${rotatedCards}, Sound played: ${soundPlayed}`);
-            if (rotatedCards === totalCards && soundPlayed === totalCards) {
+            const allCardsInteracted = interactedCards.every(interacted => interacted); // Verifica se todas as cartas foram viradas ao menos uma vez
+            console.log(`Interacted cards: ${interactedCards}, Sound played: ${soundPlayed}`);
+
+            if (allCardsInteracted && soundPlayed === totalCards) {
                 console.log("Fase concluída");
                 showModal(); // Exibe a mensagem de fase concluída
                 ensureUserIsAuthenticated(updateNextPhase); // Atualiza o Firebase
