--- a/Level1/Unit4/Flashcards/index.html
+++ b/Level1/Unit4/Flashcards/index.html
@@ -12,10 +12,13 @@
             justify-content: flex-start;
             align-items: center;
             min-height: 100vh;
-            background-color: #f0f0f0;
             margin: 0;
             padding: 20px;
+            background-image: url('../../../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: auto;
         }
+
         h1 {
             font-size: 2em;
             margin-bottom: 20px;
@@ -23,12 +26,14 @@
             color: #333;
             width: 100%;
         }
+
         #flashcards-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             width: 100%;
         }
+
         .card {
             width: 200px;
             height: 300px;
@@ -36,6 +41,7 @@
             margin: 20px;
             position: relative;
         }
+
         .card-inner {
             width: 100%;
             height: 100%;
@@ -44,15 +50,18 @@
             transition: transform 0.6s;
             transform-style: preserve-3d;
         }
+
         .card.rotated .card-inner {
             transform: rotateY(180deg);
         }
+
         .card-front, .card-back {
             position: absolute;
             width: 100%;
             height: 100%;
             backface-visibility: hidden;
         }
+
         .card-front {
             background-color: #fff;
             display: flex;
@@ -60,10 +69,12 @@
             align-items: center;
             border: 1px solid #ccc;
         }
+
         .card-front img {
             max-width: 100%;
             max-height: 100%;
         }
+
         .card-back {
             background-color: #f8f8f8;
             color: #333;
@@ -75,6 +86,7 @@
             font-size: 20px;
             padding: 10px;
         }
+
         .play-sound {
             position: absolute;
             top: 10px;
@@ -83,6 +95,7 @@
             height: 24px;
             cursor: pointer;
         }
+
         /* Estilo do modal de conclusão */
         #completion-modal {
             display: none;
@@ -97,6 +110,7 @@
             z-index: 1000;
             text-align: center;
         }
+
         #completion-modal button {
             margin-top: 20px;
             padding: 10px 20px;
@@ -105,9 +119,11 @@
             border: none;
             cursor: pointer;
         }
+
         #completion-modal button:hover {
             background-color: #555;
         }
+
         #overlay {
             display: none;
             position: fixed;
@@ -118,9 +134,39 @@
             background-color: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
+
+        /* Estilo do botão Back */
+        #back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background-color: black;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            text-transform: uppercase;
+        }
+
+        #back-button:hover {
+            background-color: #333;
+        }
+
+        @media (max-width: 600px) {
+            #back-button {
+                top: 10px;
+                left: 10px;
+                padding: 8px 16px;
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 <body>
+    <!-- Botão de retornar -->
+    <button id="back-button" onclick="goBack()">Back</button>
+
     <h1>Hannah FlashCards</h1>
     <div id="flashcards-container"></div>
 
@@ -307,6 +353,11 @@
             const level = parts[1]; // Obtém "Level1"
             const unit = parts[2]; // Obtém "Unit4"
             return { level, unit };
+        }
+
+        // Função para o botão de voltar
+        function goBack() {
+            window.history.back();
         }
 
         // Carregar flash cards ao abrir a página
