--- a/Level1/Unit4/Flashcards/index.html
+++ b/Level1/Unit4/Flashcards/index.html
@@ -12,13 +12,12 @@
             justify-content: flex-start;
             align-items: center;
             min-height: 100vh;
+            background-color: #f0f0f0;
+            background-image: url('novo_fundo.jpg'); /* Troca o fundo por um novo */
+            background-size: cover; /* Ajuste para cobrir toda a tela */
             margin: 0;
             padding: 20px;
-            background-image: url('../../../../imagens/fundo.png');
-            background-repeat: repeat;
-            background-size: auto;
         }
-
         h1 {
             font-size: 2em;
             margin-bottom: 20px;
@@ -26,14 +25,12 @@
             color: #333;
             width: 100%;
         }
-
         #flashcards-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             width: 100%;
         }
-
         .card {
             width: 200px;
             height: 300px;
@@ -41,7 +38,6 @@
             margin: 20px;
             position: relative;
         }
-
         .card-inner {
             width: 100%;
             height: 100%;
@@ -50,18 +46,15 @@
             transition: transform 0.6s;
             transform-style: preserve-3d;
         }
-
         .card.rotated .card-inner {
             transform: rotateY(180deg);
         }
-
         .card-front, .card-back {
             position: absolute;
             width: 100%;
             height: 100%;
             backface-visibility: hidden;
         }
-
         .card-front {
             background-color: #fff;
             display: flex;
@@ -69,12 +62,10 @@
             align-items: center;
             border: 1px solid #ccc;
         }
-
         .card-front img {
             max-width: 100%;
             max-height: 100%;
         }
-
         .card-back {
             background-color: #f8f8f8;
             color: #333;
@@ -86,7 +77,6 @@
             font-size: 20px;
             padding: 10px;
         }
-
         .play-sound {
             position: absolute;
             top: 10px;
@@ -95,7 +85,6 @@
             height: 24px;
             cursor: pointer;
         }
-
         /* Estilo do modal de conclusão */
         #completion-modal {
             display: none;
@@ -110,7 +99,6 @@
             z-index: 1000;
             text-align: center;
         }
-
         #completion-modal button {
             margin-top: 20px;
             padding: 10px 20px;
@@ -119,11 +107,9 @@
             border: none;
             cursor: pointer;
         }
-
         #completion-modal button:hover {
             background-color: #555;
         }
-
         #overlay {
             display: none;
             position: fixed;
@@ -135,38 +121,21 @@
             z-index: 999;
         }
 
-        /* Estilo do botão Back */
-        #back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            background-color: black;
+        /* Botão Adicional */
+        .extra-button {
+            padding: 10px 20px;
+            background-color: #333;
             color: white;
             border: none;
-            padding: 10px 20px;
             cursor: pointer;
-            font-size: 16px;
-            text-transform: uppercase;
+            margin-top: 20px;
         }
-
-        #back-button:hover {
-            background-color: #333;
-        }
-
-        @media (max-width: 600px) {
-            #back-button {
-                top: 10px;
-                left: 10px;
-                padding: 8px 16px;
-                font-size: 14px;
-            }
+        .extra-button:hover {
+            background-color: #555;
         }
     </style>
 </head>
 <body>
-    <!-- Botão de retornar -->
-    <button id="back-button" onclick="goBack()">Back</button>
-
     <h1>Hannah FlashCards</h1>
     <div id="flashcards-container"></div>
 
@@ -177,6 +146,9 @@
         <p>Congratulations! You have completed this phase.</p>
         <button onclick="closeModal()">Close</button>
     </div>
+
+    <!-- Botão adicional -->
+    <button class="extra-button" onclick="extraButtonAction()">Extra Button Action</button>
 
     <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -355,9 +327,9 @@
             return { level, unit };
         }
 
-        // Função para o botão de voltar
-        function goBack() {
-            window.history.back();
+        // Função para o botão extra
+        function extraButtonAction() {
+            alert("Botão extra pressionado!");
         }
 
         // Carregar flash cards ao abrir a página
