--- a/Level1/Unit4/Flashcards/index.html
+++ b/Level1/Unit4/Flashcards/index.html
@@ -12,9 +12,8 @@
             justify-content: flex-start;
             align-items: center;
             min-height: 100vh;
-            background-color: #f0f0f0;
-            background-image: url('novo_fundo.jpg'); /* Troca o fundo por um novo */
-            background-size: cover; /* Ajuste para cobrir toda a tela */
+            background-image: url('../../../../imagens/fundo.png'); /* Pano de fundo repetido */
+            background-repeat: repeat; /* Repetir imagem */
             margin: 0;
             padding: 20px;
         }
@@ -121,18 +120,22 @@
             z-index: 999;
         }
 
-        /* Botão Adicional */
-        .extra-button {
+        /* Botão Back */
+        .back-button {
             padding: 10px 20px;
             background-color: #333;
             color: white;
             border: none;
             cursor: pointer;
             margin-top: 20px;
+            position: fixed;
+            top: 20px;
+            left: 20px;
         }
-        .extra-button:hover {
+        .back-button:hover {
             background-color: #555;
         }
+
     </style>
 </head>
 <body>
@@ -147,8 +150,8 @@
         <button onclick="closeModal()">Close</button>
     </div>
 
-    <!-- Botão adicional -->
-    <button class="extra-button" onclick="extraButtonAction()">Extra Button Action</button>
+    <!-- Botão Back -->
+    <button class="back-button" onclick="goBack()">Back</button>
 
     <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -327,9 +330,9 @@
             return { level, unit };
         }
 
-        // Função para o botão extra
-        function extraButtonAction() {
-            alert("Botão extra pressionado!");
+        // Função para o botão Back
+        function goBack() {
+            window.history.back();
         }
 
         // Carregar flash cards ao abrir a página
